--- a/src/Style/Utils/reset.scss
+++ b/src/Style/Utils/reset.scss
@@ -12,7 +12,6 @@ body {
 
 ul {
     list-style: none;
-    padding: 0 !important;
 }
 
 a {
@@ -31,4 +30,48 @@ h4,
 h5,
 h6 {
     font-family: "Cormorant", serif;
+}
+
+.container {
+    margin: 0 auto;
+
+    @media (min-width: 310px) {
+        max-width: 100%;
+        padding: 0 15px;
+    }
+
+    @media (min-width: 576px) {
+        max-width: 540px;
+    }
+
+    @media (min-width: 768px) {
+        max-width: 720px;
+    }
+
+    @media (min-width: 810px) {
+        max-width: 790px;
+    }
+
+    @media (min-width: 880px) {
+        max-width: 830px;
+    }
+
+    @media (min-width: 992px) {
+        max-width: 960px;
+    }
+
+    @media (min-width: 1200px) {
+        max-width: 1140px;
+        width: 100%;
+    }
+
+    @media (min-width: 1400px) {
+        max-width: 1340px;
+        width: 100%;
+    }
+
+    @media (min-width: 1600px) {
+        max-width: 1540px;
+        width: 100%;
+    }
 }
